# server/src/main/java/com/nwj/cvviewer/security/CustomWebSecurityConfigurerAdapter.java
@@ -41,6 +41,9 @@ public class CustomWebSecurityConfigurerAdapter extends WebSecurityConfigurerAda
             .antMatchers(HttpMethod.POST, "/user").authenticated()
             .antMatchers(HttpMethod.POST, "/user/roles").authenticated()
             .antMatchers(HttpMethod.POST, "/user/password").authenticated()
+            .antMatchers(HttpMethod.GET, "/user/getAllUserNames").authenticated()
+            .antMatchers(HttpMethod.GET, "/user/getUserRoles").authenticated()
+            .antMatchers(HttpMethod.OPTIONS, "/user/*").permitAll()
             .antMatchers(HttpMethod.DELETE, "/user/*").authenticated()
             .antMatchers( "/cvs/*").permitAll()
             .antMatchers("/**").anonymous()
